# sbc6502

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
emulator/: CMakeLists.txt  addr_modes.cpp  api.cpp  emulator.cpp  emulator_impl.cpp  emulator_impl.h  flag_helper.h  instructions.cpp  opcode_table.h  wdc_instructions.cpp
emulator/include/: Emulator.h  Registers.h
include/: Emulator.h
source/: emulator.cpp  emulator_impl.cpp  emulator_impl.h  instructions.cpp  opcode_table.h
src/: custom_board.rs  emulator.rs  lib.rs  main.rs
