[package]
name = "sbc6502"
version = "1.0.0"
authors = [ "Alexander Ulmer" ]
description = "65C02 CPU Emulator Safe Wrapper for Rust"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
repository = "https://https://github.com/ulmer-a/em6502"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"

[build-dependencies]
cmake = "0.1.48"